--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -8,7 +8,7 @@ html, body
 html
 	background: url(../img/bg.jpg)
 body	
-	background: url(../img/bg-top.png) no-repeat 56% 0	
+	background: url(../img/bg-top1.png) no-repeat 56% 0	
 	font-family: 'Cuprum', Arial, Tahoma, sans-serif
 	font-weight: normal
 	font-size: 14px
