--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -553,7 +553,7 @@ table
 		&:hover
 			+sized-sprite($icons, ok-h)
 .popup__terms
-	margin: 20px 0 30px 0
+	margin: 20px 0 25px 0
 	label
 		position: relative
 		padding-left: 30px
@@ -573,15 +573,32 @@ table
 	i
 		+sized-sprite($icons, check)
 .popup__social
-	margin: 25px 0 15px 0
+	margin: 20px 0 15px 0
 	font-size: 0
+	text-align: center
 	a
 		display: inline-block
-		margin-bottom: 17px
+		margin-bottom: 50px
 .popup__fb
 	+sized-sprite($icons, pp-fb)
-.popup__tw
-	+sized-sprite($icons, pp-tw)
+.popup__or
+	position: relative
+	text-align: center
+	span
+		position: relative
+		display: inline-block
+		padding: 0 10px
+		background: #e2e5d9
+		font-size: 14px
+		color: #a4a4a4
+		z-index: 5  
+	i
+		position: absolute
+		top: 6px
+		left: 0
+		width: 100%
+		border-top: 1px solid #b9b9b9 
+		border-bottom: 1px solid #fff 
 .popup__title
 	position: relative
 	padding: 5px 0 20px 0
@@ -596,7 +613,7 @@ table
 		color: $red
 .popup__btn
 	position: absolute
-	bottom: 7px
+	bottom: -60px
 	right: 15px
 	+sized-sprite($icons, inp-btn)
 	font-family: 'FiveMinutes', Arial, Tahoma, sans-serif	
