--- a/css/screen.css
+++ b/css/screen.css
@@ -6,7 +6,7 @@
 
 html, body { height: 100%; }
 
-body { font-family: "Open Sans", Arial, Tahoma, sans-serif; font-weight: 400; font-size: 14px; color: #737373; line-height: 1.4; }
+body { background: url(../img/bg.jpg); font-family: "Open Sans", Arial, Tahoma, sans-serif; font-weight: 400; font-size: 13px; color: #737373; line-height: 1.4; }
 
 a img, fieldset { border: none; }
 
@@ -16,48 +16,82 @@ p { line-height: 1.2; }
 
 li { list-style: none; }
 
-textarea, button, select, input { border: none; outline: none; }
+textarea, button, select, input { border: none; outline: none; font-family: "Open Sans", Arial, Tahoma, sans-serif; color: #737373; }
 
 button { line-height: 1; cursor: pointer; }
 
 table { border-spacing: 0; border-collapse: collapse; }
 
-.ico-help { background: url('../img/icons-s75756d6f49.png') 0 -71px no-repeat; width: 6px; height: 10px; }
+.ico-help { background: url('../img/icons-s527f638190.png') 0 -163px no-repeat; width: 6px; height: 10px; }
 
-.ico-home { background: url('../img/icons-s75756d6f49.png') 0 -51px no-repeat; width: 12px; height: 10px; }
+.ico-home { background: url('../img/icons-s527f638190.png') 0 -143px no-repeat; width: 12px; height: 10px; }
 
-.ico-mark { background: url('../img/icons-s75756d6f49.png') 0 -91px no-repeat; width: 32px; height: 48px; }
+.ico-mark { background: url('../img/icons-s527f638190.png') 0 -379px no-repeat; width: 32px; height: 48px; }
+
+.ico-upload { background: url('../img/icons-s527f638190.png') 0 -51px no-repeat; width: 32px; height: 36px; }
+
+.ico-record { background: url('../img/icons-s527f638190.png') 0 -97px no-repeat; width: 32px; height: 36px; }
+
+.ico-edit { background: url('../img/icons-s527f638190.png') 0 -183px no-repeat; width: 18px; height: 18px; }
+
+.ico-del { background: url('../img/icons-s527f638190.png') 0 -288px no-repeat; width: 18px; height: 18px; }
+
+.ico-photo { background: url('../img/icons-s527f638190.png') 0 -211px no-repeat; width: 56px; height: 46px; }
+
+.ico-mail { background: url('../img/icons-s527f638190.png') 0 -267px no-repeat; width: 14px; height: 11px; }
+
+.ico-terms { background: url('../img/icons-s527f638190.png') 0 -358px no-repeat; width: 14px; height: 11px; }
+
+.ico-policy { background: url('../img/icons-s527f638190.png') 0 -337px no-repeat; width: 14px; height: 11px; }
+
+.ico-about { background: url('../img/icons-s527f638190.png') 0 -316px no-repeat; width: 14px; height: 11px; }
+
+.zoom { background: url('../img/icons-s527f638190.png') 0 -465px no-repeat; width: 18px; height: 18px; }
 
 .wrap { min-height: 100%; height: auto !important; height: 100%; margin: 0 auto -80px; }
 
 .container { width: 1000px; margin: 0 auto; }
 
-.push { height: 80px; clear: both; }
+.push { height: 100px; clear: both; }
 
-.header { height: 74px; border-bottom: 3px solid #b9dac9; }
+.header { height: 74px; background: white; border-bottom: 3px solid #b9dac9; }
 .header .container { overflow: hidden; }
-.header .btn_red { float: left; margin-top: 17px; }
-.header .btn_ylw { float: right; margin: 20px 26px 0 13px; }
+.header .btn-red { float: left; margin-top: 17px; }
+.header .btn-ylw { float: right; margin: 20px 26px 0 13px; }
 
-.header__user { float: right; margin: 25px 0 0 40px; color: #737373; }
+.header__user { float: right; margin: 25px 0 0 40px; font-size: 14px; color: #737373; }
 
 .header__links { float: right; margin-top: 26px; }
-.header__links a { position: relative; float: left; padding-left: 9px; font-family: "lgc", Arial, Tahoma, sans-serif; font-size: 13px; text-transform: uppercase; color: #3c3c3c; }
+.header__links a { position: relative; float: left; padding-left: 9px; font-family: "lgc", Arial, Tahoma, sans-serif; text-transform: uppercase; color: #3c3c3c; }
 .header__links a:first-child { padding-left: 14px; margin-right: 24px; }
 .header__links i { position: absolute; top: 3px; left: 0; }
 
-.logo { float: left; margin: 13px 42px 0 85px; background: url('../img/icons-s75756d6f49.png') 0 0 no-repeat; width: 105px; height: 41px; }
+.logo { float: left; margin: 13px 42px 0 85px; background: url('../img/icons-s527f638190.png') 0 0 no-repeat; width: 105px; height: 41px; }
 
-.title { padding: 19px 26px 16px 28px; font-size: 20px; overflow: hidden; }
-.title .btn_green { float: right; }
+.footer { height: 75px; padding-top: 25px; background: white; }
 
-.btn { width: 100px; height: 33px; box-shadow: 0 0 0 4px rgba(255, 255, 255, 0.1) inset; line-height: 33px; text-align: center; font-family: "lgc", Arial, Tahoma, sans-serif; text-transform: uppercase; font-size: 14px; color: #3c3c3c; }
+.footer__nav { font-size: 0; text-align: center; }
+.footer__nav a { display: inline-block; width: 190px; margin: 0 12px; padding-top: 8px; border-top: 20px solid #b4d7c5; font-family: "lgc", Arial, Tahoma, sans-serif; font-size: 14px; text-transform: uppercase; line-height: 1; color: #3c3c3c; }
+.footer__nav span { position: relative; display: inline-block; padding-left: 18px; }
+.footer__nav i { position: absolute; top: 0; left: 0; }
 
-.btn_red { background: #e36026; color: white; }
+.number { width: 32px; height: 32px; background: #e36026; line-height: 32px; font-weight: bold; font-size: 16px; color: white; text-align: center; }
 
-.btn_ylw { background: #f1f0aa; }
+.input-text { height: 30px; padding: 0 12px; border: 1px solid #6d6d6d; }
 
-.btn_green { background: #b4d7c5; }
+.title { position: relative; padding-left: 16px; margin-bottom: 10px; text-transform: uppercase; font-weight: bold; font-size: 14px; }
+.title:before { content: ""; position: absolute; top: 5px; left: 0; width: 10px; height: 10px; background: #e36026; }
+
+.btn { padding: 6px; background: #737373; }
+.btn i { display: block; }
+
+.btn-red, .btn-ylw, .btn-green { width: 100px; height: 33px; box-shadow: 0 0 0 4px rgba(255, 255, 255, 0.1) inset; line-height: 33px; text-align: center; font-family: "lgc", Arial, Tahoma, sans-serif; text-transform: uppercase; font-size: 14px; color: #3c3c3c; }
+
+.btn-red { background: #e36026; color: white; }
+
+.btn-ylw { background: #f1f0aa; }
+
+.btn-green { background: #b4d7c5; }
 
 .logo { font: 0/0 a; text-shadow: none; color: transparent; }
 
@@ -68,19 +102,29 @@ table { border-spacing: 0; border-collapse: collapse; }
 
 @font-face { font-family: "lgc"; src: url("../fonts/lgc.eot"); src: url("../fonts/lgc.eot?#iefix") format("embedded-opentype"), url("../fonts/lgc.woff") format("woff"), url("../fonts/lgc.ttf") format("truetype"), url("../fonts/lgc.svg#lgc") format("svg"); font-weight: normal; font-style: normal; }
 
-.map { position: relative; min-height: 380px; }
+.logo { font: 0/0 a; text-shadow: none; color: transparent; }
+
+@font-face { font-family: "lgc"; src: url("../fonts/lgc.eot"); src: url("../fonts/lgc.eot?#iefix") format("embedded-opentype"), url("../fonts/lgc.woff") format("woff"), url("../fonts/lgc.ttf") format("truetype"), url("../fonts/lgc.svg#lgc") format("svg"); font-weight: normal; font-style: normal; }
+
+.map { margin-bottom: 60px; background: white; }
 .map iframe { display: block; }
+
+.map__title { padding: 19px 28px 16px 28px; background: white; font-size: 20px; overflow: hidden; }
+.map__title .container { width: 944px; }
+.map__title .btn-green { float: right; }
+
+.map__container { position: relative; }
 
 .map__search { position: absolute; top: 0; left: 50%; margin-left: -500px; border: 20px solid rgba(0, 0, 0, 0.5); }
 .map__search input, .map__search button { float: left; height: 32px; }
 .map__search input { width: 260px; padding: 0 10px; }
 .map__search button { width: 40px; background: white; text-align: center; }
-.map__search button i { display: inline-block; background: url('../img/icons-s75756d6f49.png') 0 -149px no-repeat; width: 17px; height: 18px; }
+.map__search button i { display: inline-block; background: url('../img/icons-s527f638190.png') 0 -437px no-repeat; width: 17px; height: 18px; }
 
 .map__help { position: absolute; top: 0; right: 50%; width: 130px; margin-right: -500px; background: #f1f0aa; padding: 20px 75px 20px 20px; border: 1px solid #dad794; font-weight: 700; font-size: 11px; text-transform: uppercase; }
 .map__help .ico-mark { position: absolute; top: 12px; right: 23px; }
 
-.map-slider { position: relative; }
+.map-slider { position: relative; height: 92px; }
 .map-slider .prev, .map-slider .next { position: absolute; top: 20px; padding: 15px 17px; background: #d9ebe2; }
 .map-slider .prev i, .map-slider .next i { display: block; width: 0px; height: 0px; border-style: solid; }
 .map-slider .prev { left: 20px; }
@@ -92,10 +136,72 @@ table { border-spacing: 0; border-collapse: collapse; }
 .map-slider__items ul { position: absolute; width: 2000em; }
 .map-slider__items li { position: relative; float: left; width: 154px; height: 100px; line-height: 100px; margin-right: -1px; border: 1px solid #babbba; background: white; font-size: 0; text-align: center; }
 .map-slider__items li span { display: inline-block; padding: 0 10px; vertical-align: middle; line-height: 1.4; font-size: 12px; }
+.map-slider__items li .number { position: absolute; top: 0; left: 0; }
 .map-slider__items li.active { width: 146px; height: 92px; line-height: 92px; box-shadow: #ccccce 0 0 0 3px inset; border: 5px solid #3c3c3c; z-index: 5; }
+.map-slider__items:after, .map-slider__items:before { content: ""; position: absolute; top: 0; height: 102px; width: 1px; background: #babbba; z-index: 10; }
+.map-slider__items:after { right: 0; }
+.map-slider__items:before { left: 0; }
 
-.map-slider__number { position: absolute; top: 0; left: 0; width: 32px; height: 32px; background: #e36026; line-height: 32px; font-weight: bold; font-size: 14px; color: white; }
+.add { position: relative; width: 646px; margin: 0 auto 25px; padding: 40px 54px; background: white; box-shadow: #ccccce 0 0 0 3px inset; border: 5px solid #3c3c3c; }
+.add .btn-red, .add .btn-green { position: absolute; top: 10px; }
+.add .btn-red_bottom, .add .btn-green_bottom { top: auto; bottom: 10px; }
+.add .btn-red, .add .btn-red_bottom { right: 10px; }
+.add .btn-green, .add .btn-green_bottom { right: 120px; }
 
-.logo { font: 0/0 a; text-shadow: none; color: transparent; }
+.add__title { margin-bottom: 20px; overflow: hidden; }
+.add__title .number { float: left; margin-right: 8px; }
+.add__title .input-text { float: left; width: 252px; font-size: 16px; }
 
-@font-face { font-family: "lgc"; src: url("../fonts/lgc.eot"); src: url("../fonts/lgc.eot?#iefix") format("embedded-opentype"), url("../fonts/lgc.woff") format("woff"), url("../fonts/lgc.ttf") format("truetype"), url("../fonts/lgc.svg#lgc") format("svg"); font-weight: normal; font-style: normal; }
+.location .title { margin-bottom: 20px; }
+
+.audio { margin-bottom: 20px; }
+
+.audio__add { margin-bottom: 20px; overflow: hidden; }
+.audio__add button { position: relative; float: left; width: 203px; height: 66px; padding-left: 75px; background: white; box-shadow: #ccccce 0 0 0 3px inset; border: 5px solid #3c3c3c; text-align: left; font-family: "lgc", Arial, Tahoma, sans-serif; text-transform: uppercase; color: #3c3c3c; font-size: 24px; overflow: visible; }
+.audio__add button i { position: absolute; top: 11px; left: 20px; }
+.audio__add p { overflow: hidden; font-style: italic; line-height: 1; }
+
+.audio__upload { margin-right: 23px; }
+
+.audio__record { margin-right: 27px; }
+
+.audio__detail { overflow: hidden; }
+
+.audio__track { float: left; margin-right: 27px; padding: 9px 0; border: 1px solid #737373; }
+
+.audio__play { float: left; padding: 3px 4px; margin: 0 7px 0 3px; background: #737373; }
+.audio__play i { display: block; width: 0px; height: 0px; border-style: solid; border-width: 4px 0 4px 6px; border-color: transparent transparent transparent white; }
+
+.audio__slider { float: left; padding-right: 15px; margin-right: 10px; background: #d5d5d5; }
+.audio__slider .ui-slider { position: relative; width: 298px; height: 14px; }
+.audio__slider .ui-slider-handle { position: absolute; top: -1px; width: 14px; height: 14px; background: white; border: 1px solid #737373; outline: none; }
+.audio__slider .ui-slider-range { position: absolute; top: 0; height: 14px; background: #e36026; }
+
+.audio__time { float: left; width: 80px; font-size: 12px; line-height: 1.2; }
+
+.audio__btns { padding: 1px 0; overflow: hidden; }
+.audio__btns .btn { float: left; margin-right: 4px; }
+
+.audio__title { margin-bottom: 8px; }
+
+.description { margin-bottom: 20px; }
+
+.description__content { position: relative; height: 115px; padding: 10px; border: 1px solid #737373; line-height: 1.2; overflow: hidden; }
+.description__content:after { content: ""; position: absolute; bottom: 0; left: 0; right: 0; height: 20px; box-shadow: 0 -10px 10px 7px white inset; }
+
+.photo__list ul { margin-right: -50px; font-size: 0; }
+.photo__list li { display: inline-block; width: 140px; margin: 0 28px 40px 0; vertical-align: top; font-size: 13px; }
+.photo__list li.photo-select { width: 130px; }
+
+.photo__pic { position: relative; margin-bottom: 9px; }
+.photo__pic img { display: block; }
+.photo__pic .btn { position: absolute; top: 0; right: 0; }
+.photo__pic .zoom { position: absolute; left: 5px; bottom: 4px; }
+
+.photo__desc { position: relative; height: 62px; padding: 5px; border: 1px solid #737373; font-size: 11px; line-height: 1; }
+.photo__desc:after { content: ""; position: absolute; bottom: 0; left: 0; right: 0; height: 20px; box-shadow: 0 -5px 5px 2px white inset; }
+
+.photo-select { position: relative; width: 130px; height: 108px; padding-top: 22px; box-shadow: #ccccce 0 0 0 3px inset; border: 5px solid #3c3c3c; text-align: center; font-size: 0; }
+.photo-select .ico-photo { display: inline-block; }
+.photo-select span { display: block; margin-top: 10px; font-family: "lgc", Arial, Tahoma, sans-serif; font-size: 26px; color: #3c3c3c; text-transform: uppercase; }
+.photo-select input { position: absolute; top: 0; left: 0; width: 100%; height: 100%; opacity: 0; }
