--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -6,9 +6,10 @@
 html, body 
 	height: 100%
 body
+	background: url(../img/bg.jpg) 
 	font-family: 'Open Sans', Arial, Tahoma, sans-serif
 	font-weight: 400
-	font-size: 14px
+	font-size: 13px
 	color: $gray 
 	line-height: 1.4
 	//-webkit-transform: translate3d(0,0,0);
@@ -26,6 +27,8 @@ li
 textarea, button, select, input
 	border: none
 	outline: none
+	font-family: 'Open Sans', Arial, Tahoma, sans-serif
+	color: #737373 
 button 
 	line-height: 1
 	cursor: pointer
@@ -39,6 +42,26 @@ table
 	+s($icons, ico-home)
 .ico-mark
 	+s($icons, ico-mark)
+.ico-upload
+	+s($icons, ico-upload)
+.ico-record
+	+s($icons, ico-record)
+.ico-edit
+	+s($icons, ico-edit)
+.ico-del
+	+s($icons, ico-del)
+.ico-photo
+	+s($icons, ico-photo)
+.ico-mail
+	+s($icons, ico-mail)
+.ico-terms
+	+s($icons, ico-terms)
+.ico-policy
+	+s($icons, ico-policy)
+.ico-about
+	+s($icons, ico-about)
+.zoom
+	+s($icons, zoom)
 // common styles
 .wrap
 	min-height: 100%
@@ -49,23 +72,25 @@ table
 	width: 1000px
 	margin: 0 auto
 .push
-	height: 80px
+	height: 100px
 	clear: both
 //header
 .header
 	height: 74px
+	background: #fff 
 	border-bottom: 3px solid #b9dac9
 	.container
 		overflow: hidden
-	.btn_red
+	.btn-red
 		float: left
 		margin-top: 17px 
-	.btn_ylw
+	.btn-ylw
 		float: right
 		margin: 20px 26px 0 13px
 .header__user
 	float: right
 	margin: 25px 0 0 40px
+	font-size: 14px
 	color: $gray 
 .header__links
 	float: right
@@ -74,8 +99,7 @@ table
 		position: relative
 		float: left
 		padding-left: 9px
-		@include font
-		font-size: 13px
+		+font
 		text-transform: uppercase
 		color: #3c3c3c
 		&:first-child
@@ -90,15 +114,71 @@ table
 	margin: 13px 42px 0 85px
 	@extend %ht
 	+s($icons, logo)
+//footer
+.footer
+	height: 75px
+	padding-top: 25px
+	background: #FFF 
+.footer__nav
+	font-size: 0
+	text-align: center
+	a
+		display: inline-block
+		width: 190px
+		margin: 0 12px
+		padding-top: 8px
+		border-top: 20px solid $green 
+		+font
+		font-size: 14px
+		text-transform: uppercase
+		line-height: 1
+		color: #3c3c3c 
+	span
+		position: relative
+		display: inline-block
+		padding-left: 18px
+	i
+		position: absolute
+		top: 0
+		left: 0
+//number
+.number
+	width: 32px
+	height: 32px
+	background: $red 
+	line-height: 32px
+	font-weight: bold
+	font-size: 16px
+	color: #FFF
+	text-align: center
+//inputs
+.input-text
+	height: 30px
+	padding: 0 12px
+	border: 1px solid #6d6d6d
 //title
-.title		
-	padding: 19px 26px 16px 28px
-	font-size: 20px
-	overflow: hidden
-	.btn_green
-		float: right
+.title
+	position: relative
+	padding-left: 16px 
+	margin-bottom: 10px
+	text-transform: uppercase
+	font-weight: bold
+	font-size: 14px
+	&:before
+		content: ""
+		position: absolute
+		top: 5px
+		left: 0
+		width: 10px
+		height: 10px
+		background: $red 
 //btn
 .btn
+	padding: 6px
+	background: #737373
+	i
+		display: block
+.btn-red, .btn-ylw, .btn-green
 	width: 100px
 	height: 33px
 	box-shadow: 0 0 0 4px rgba(255,255,255,.1) inset
@@ -108,11 +188,10 @@ table
 	text-transform: uppercase
 	font-size: 14px
 	color: #3c3c3c 
-.btn_red
+.btn-red
 	background: $red
 	color: #FFF 
-.btn_ylw
+.btn-ylw
 	background: $ylw
-.btn_green
+.btn-green
 	background: $green 
-	
