--- a/sass/_inner.sass
+++ b/sass/_inner.sass
@@ -1,2 +1,334 @@
 @import "base"
 //styles for inner pages
+//map
+.map
+	margin-bottom: 60px
+	background: #FFF 
+	iframe
+		display: block
+.map__title		
+	padding: 19px 28px 16px 28px
+	background: #FFF 
+	font-size: 20px
+	overflow: hidden
+	.container
+		width: 944px
+	.btn-green
+		float: right
+.map__container
+	position: relative
+.map__search	
+	position: absolute
+	top: 0
+	left: 50%
+	margin-left: -500px
+	border: 20px solid rgba(0,0,0,.5)
+	input, button
+		float: left
+		height: 32px
+	input
+		width: 260px		
+		padding: 0 10px
+	button
+		width: 40px
+		background: #FFF 
+		text-align: center
+		i
+			display: inline-block
+			+s($icons, search)
+.map__help
+	position: absolute
+	top: 0
+	right: 50%
+	width: 130px
+	margin-right: -500px
+	background: $ylw
+	padding: 20px 75px 20px 20px
+	border: 1px solid #dad794
+	font-weight: 700 
+	font-size: 11px	
+	text-transform: uppercase 
+	.ico-mark
+		position: absolute
+		top: 12px
+		right: 23px
+.map-slider
+	position: relative
+	height: 92px
+	.prev, .next
+		position: absolute
+		top: 20px
+		padding: 15px 17px
+		background: #d9ebe2
+		i
+			display: block
+			width: 0px
+			height: 0px
+			border-style: solid	
+	.prev
+		left: 20px
+		i
+			border-width: 12.5px 20px 12.5px 0
+			border-color: transparent #b9b9b9 transparent transparent
+	.next
+		right: 20px
+		i
+			border-width: 12.5px 0 12.5px 20px
+			border-color: transparent transparent transparent #b9b9b9
+.map-slider__items
+	position: relative
+	top: -5px
+	width: 776px
+	height: 102px
+	margin: 0 auto
+	overflow: hidden
+	ul
+		position: absolute
+		width: 2000em
+	li
+		position: relative
+		float: left
+		width: 154px
+		height: 100px
+		line-height: 100px
+		margin-right: -1px
+		border: 1px solid #babbba
+		background: #FFF 
+		font-size: 0
+		text-align: center
+		span
+			display: inline-block
+			padding: 0 10px
+			vertical-align: middle
+			line-height: 1.4
+			font-size: 12px
+		.number
+			position: absolute
+			top: 0
+			left: 0
+		&.active
+			width: 146px
+			height: 92px
+			line-height: 92px
+			box-shadow: #ccccce 0 0 0 3px inset
+			border: 5px solid #3c3c3c
+			z-index: 5 
+	&:after, &:before
+		content: ""
+		position: absolute
+		top: 0
+		height: 102px
+		width: 1px
+		background: #babbba 
+		z-index: 10 
+	&:after
+		right: 0
+	&:before
+		left: 0
+//add
+.add
+	position: relative
+	width: 646px
+	margin: 0 auto 25px
+	padding: 40px 54px
+	background: #FFF 
+	box-shadow: #ccccce 0 0 0 3px inset
+	border: 5px solid #3c3c3c
+	.btn-red, .btn-green
+		position: absolute
+		top: 10px
+	.btn-red_bottom, .btn-green_bottom
+		top: auto
+		bottom: 10px
+	.btn-red, .btn-red_bottom
+		right: 10px
+	.btn-green, .btn-green_bottom
+		right: 120px
+.add__title
+	margin-bottom: 20px
+	overflow: hidden
+	.number
+		float: left
+		margin-right: 8px
+	.input-text
+		float: left
+		width: 252px
+		font-size: 16px
+//location
+.location
+	.title
+		margin-bottom: 20px
+//audio
+.audio
+	margin-bottom: 20px
+.audio__add
+	margin-bottom: 20px
+	overflow: hidden
+	button
+		position: relative
+		float: left
+		width: 203px
+		height: 66px
+		padding-left: 75px
+		background: #FFF 
+		box-shadow: #ccccce 0 0 0 3px inset
+		border: 5px solid #3c3c3c
+		text-align: left
+		+font
+		text-transform: uppercase
+		color: #3c3c3c
+		font-size: 24px
+		overflow: visible 
+		i
+			position: absolute
+			top: 11px
+			left: 20px
+	p
+		overflow: hidden
+		font-style: italic
+		line-height: 1
+.audio__upload
+	margin-right: 23px
+.audio__record
+	margin-right: 27px
+.audio__detail
+	overflow: hidden 
+.audio__track
+	float: left
+	margin-right: 27px
+	padding: 9px 0
+	border: 1px solid #737373
+.audio__play
+	float: left
+	padding: 3px 4px
+	margin: 0 7px 0 3px
+	background: #737373
+	i
+		display: block
+		width: 0px
+		height: 0px
+		border-style: solid
+		border-width: 4px 0 4px 6px
+		border-color: transparent transparent transparent #ffffff
+.audio__slider
+	float: left
+	padding-right: 15px
+	margin-right: 10px
+	background: #d5d5d5
+	.ui-slider
+		position: relative
+		width: 298px
+		height: 14px	
+	.ui-slider-handle
+		position: absolute
+		top: -1px
+		width: 14px
+		height: 14px
+		background: #fff
+		border: 1px solid #737373
+		outline: none 
+	.ui-slider-range
+		position: absolute
+		top: 0
+		height: 14px
+		background: $red 
+.audio__time
+	float: left
+	width: 80px
+	font-size: 12px
+	line-height: 1.2
+.audio__btns
+	padding: 1px 0
+	overflow: hidden
+	.btn
+		float: left
+		margin-right: 4px		
+.audio__title
+	margin-bottom: 8px 
+//description
+.description
+	margin-bottom: 20px
+.description__content
+	position: relative
+	height: 115px
+	padding: 10px
+	border: 1px solid #737373	
+	line-height: 1.2
+	overflow: hidden
+	&:after
+		content: ""
+		position: absolute
+		bottom: 0
+		left: 0
+		right: 0
+		height: 20px
+		box-shadow: 0 -10px 10px 7px #fff inset
+//photos
+.photo__list
+	ul
+		margin-right: -50px
+		font-size: 0
+	li
+		display: inline-block
+		width: 140px
+		margin: 0 28px 40px 0
+		vertical-align: top
+		font-size: 13px
+		&.photo-select
+			width: 130px
+.photo__pic
+	position: relative
+	margin-bottom: 9px
+	img
+		display: block
+	.btn
+		position: absolute
+		top: 0
+		right: 0
+	.zoom
+		position: absolute
+		left: 5px
+		bottom: 4px
+.photo__desc
+	position: relative
+	height: 62px
+	padding: 5px
+	border: 1px solid #737373
+	font-size: 11px
+	line-height: 1
+	&:after
+		content: ""
+		position: absolute
+		bottom: 0
+		left: 0
+		right: 0
+		height: 20px
+		box-shadow: 0 -5px 5px 2px white inset
+//photo-select
+.photo-select
+	position: relative
+	width: 130px
+	height: 108px
+	padding-top: 22px
+	box-shadow: #ccccce 0 0 0 3px inset
+	border: 5px solid #3c3c3c
+	text-align: center
+	font-size: 0
+	.ico-photo
+		display: inline-block
+	span
+		display: block
+		margin-top: 10px
+		+font
+		font-size: 26px
+		color: #3c3c3c 
+		text-transform: uppercase
+	input
+		position: absolute
+		top: 0
+		left: 0
+		width: 100%
+		height: 100%
+		opacity: 0 
+		
+	
