--- a/sass/_inner.sass
+++ b/sass/_inner.sass
@@ -64,17 +64,23 @@
 			display: block
 			width: 0px
 			height: 0px
-			border-style: solid	
+			border-style: solid			
 	.prev
 		left: 20px
 		i
 			border-width: 12.5px 20px 12.5px 0
-			border-color: transparent #b9b9b9 transparent transparent
+			border-color: transparent #3a3a3a transparent transparent
+		&.disabled
+			i
+				border-color: transparent #b9b9b9 transparent transparent
 	.next
 		right: 20px
 		i
 			border-width: 12.5px 0 12.5px 20px
-			border-color: transparent transparent transparent #b9b9b9
+			border-color: transparent transparent transparent #3a3a3a
+		&.disabled
+			i
+				border-color: transparent transparent transparent #b9b9b9
 .map-slider__items
 	position: relative
 	top: -5px
@@ -96,6 +102,7 @@
 		background: #FFF 
 		font-size: 0
 		text-align: center
+		cursor: pointer 
 		span
 			display: inline-block
 			padding: 0 10px
@@ -113,6 +120,9 @@
 			box-shadow: #ccccce 0 0 0 3px inset
 			border: 5px solid #3c3c3c
 			z-index: 5 
+			&:hover
+				background: #f3f1a7
+				box-shadow: none				
 	&:after, &:before
 		content: ""
 		position: absolute
@@ -183,6 +193,13 @@
 			position: absolute
 			top: 11px
 			left: 20px
+		&:hover
+			background: #f3f1a7 
+			box-shadow: #d4d498 0 0 0 3px inset
+			.ico-upload
+				+s($icons, ico-upload-h)
+			.ico-record
+				+s($icons, ico-record-h)
 	p
 		overflow: hidden
 		font-style: italic
@@ -210,6 +227,8 @@
 		border-style: solid
 		border-width: 4px 0 4px 6px
 		border-color: transparent transparent transparent #ffffff
+	&:hover
+		background: #3a3a3a 
 .audio__slider
 	float: left
 	padding-right: 15px
@@ -330,5 +349,9 @@
 		width: 100%
 		height: 100%
 		opacity: 0 
-		
+	&:hover
+		background: #f3f1a7 
+		box-shadow: #d4d498 0 0 0 3px inset
+		.ico-photo
+			+s($icons, ico-photo-h)
 	
